# CG

./: README.md
Fase1/outputs/: cone_1_2_4_3.3d  plane_2_3.3d  sphere_1_10_10.3d
Fase1/src/: CMakeLists.txt
Fase1/src/engine_src/: engine.cpp
Fase1/src/generator_src/: cone.cpp  cone.hpp  plane.cpp  sphere.cpp
Fase1/testes/: test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml
Fase2/outputs/: box_2_3.3d  sphere_1_16_16.3d  sphere_1_32_32.3d
Fase2/src/: CMakeLists.txt
Fase2/src/build 2/: CMakeCache.txt  Makefile  cmake_install.cmake  engine  generator
Fase2/src/engine_src/: engine.cpp
Fase2/testes/: solar_system.xml  test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml
Fase3/outputs/: bezier_10.3d  sphere_1_8_8.3d  torus.3d
Fase3/src/: CMakeLists.txt
Fase3/src/engine_src/: engine.cpp
Fase3/src/utils/: matrix.cpp  matrix.hpp  primitive.cpp
Fase3/testes/: solar_system.xml  test_3_1.xml  test_3_2.xml
Fase4/outputs/: bezier_10.3d  box_2_3.3d  cone_1_2_4_3.3d  plane_2_3.3d  sphere_1_16_16.3d  sphere_1_32_32.3d  sphere_1_8_8.3d  torus.3d
Fase4/src/engine_src/: engine.cpp  engine.hpp
Fase4/src/generator_src/: bezier.cpp  box.cpp  cone.cpp  generator.cpp  plane.cpp  ring.cpp  sphere.cpp
Fase4/src/utils/: primitive.hpp
Fase4/testes/: solar_system.xml  test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml
